fix: cambios tras lint report